feat: Add new image assets and a WordPress blog page, update public HTML files and components, and refactor CSS.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,18 @@
+image: node:lts
+
 pages:
-  image: node:lts
-  before_script:
-    - npm ci
+  cache:
+    paths:
+      - node_modules/
   script:
+    - npm install
     - npm run build
   artifacts:
     paths:
       - public
   only:
     - main
+    - master
+
+# To deploy to GitLab Pages, the artifact folder MUST be named 'public'.
+# Since astro.config.mjs already sets 'outDir' to 'public', this works automatically.
